Fix bottom gamemodes spacing between

--- a/src/ClientApp/super-scrabble-app/src/app/pages/home/home.component.css
+++ b/src/ClientApp/super-scrabble-app/src/app/pages/home/home.component.css
@@ -64,3 +64,7 @@
   column-gap: 1rem;
   row-gap: 2rem;
 }
+
+.invisible-card {
+  visibility: hidden !important;
+}
